fix db type err
