# api/user.go
@@ -9,22 +9,20 @@ import (
 )
 
 // @Summary
-// @Description Register a new user with email, username and password
+// @Description Get user info by user ID
 // @Tags users
 // @Accept  json
 // @Produce  json
-// @Param   email     body    string     true        "Email"
-// @Param   username  body    string     true        "Username"
-// @Param   password  body    string     true        "Password"
-// @Success 200 {object} User
-// @Failure 400 {object} string "User already exists"
+// @Param   id    body    string     true        "User ID"
+// @Success 200 {object} db.User
+// @Failure 400 {object} string "User not found"
 // @Failure 500 {object} string "Internal server error"
-// @Router /register [post]
+// @Router /myinfo [post]
 func GetMyInfo(c *fiber.Ctx, q *db.Queries) error {
     ctx := context.WithValue(context.Background(), "fiberCtx", c)
 
     type MyInfoRequest struct {
-            Email    string `json:"email"`
+            ID    string `json:"id"`
         }
 
         var req MyInfoRequest
@@ -32,17 +30,29 @@ func GetMyInfo(c *fiber.Ctx, q *db.Queries) error {
         err := utils.ParseRequestBody(c, &req)
         utils.CheckErr(err)
 
-        user, err := q.GetUserByID(ctx, req.Email)
+        user, err := q.GetUserByID(ctx, req.ID)
         utils.CheckErr(err)
 
         return c.JSON(user)
 }
 
+// @Summary
+// @Description Register a new user with email, username and password
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param   email     body    string     true        "Email"
+// @Param   username  body    string     true        "Username"
+// @Param   password  body    string     true        "Password"
+// @Success 200 {object} db.User
+// @Failure 400 {object} string "User already exists"
+// @Failure 500 {object} string "Internal server error"
+// @Router /register [post]
 func SignUp(c *fiber.Ctx, q *db.Queries) error {
     ctx := context.WithValue(context.Background(), "fiberCtx", c)
 
     type SignUpRequest struct {
-            Id    string `json:"id"`
+            ID    string `json:"id"`
             Password string `json:"password"`
             Username string `json:"username"`
         }
@@ -53,7 +63,7 @@ func SignUp(c *fiber.Ctx, q *db.Queries) error {
         utils.CheckErr(err)
 
         user, err := q.CreateUser(ctx, db.CreateUserParams{
-            Email:		req.Id,
+            ID:		req.ID,
             Password:	req.Password,
             Username:	req.Username,
         })
@@ -62,11 +72,22 @@ func SignUp(c *fiber.Ctx, q *db.Queries) error {
         return c.JSON(user)
 }
 
+// @Summary
+// @Description Register a new user with email, username and password
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param   email     body    string     true        "Email"
+// @Param   password  body    string     true        "Password"
+// @Success 200 {object} db.User
+// @Failure 400 {object} string "User already exists"
+// @Failure 500 {object} string "Internal server error"
+// @Router /login [post]
 func Login(c *fiber.Ctx, q *db.Queries) error {
     ctx := context.WithValue(context.Background(), "fiberCtx", c)
 
 	type LoginRequest struct {
-            Id    string `json:"id"`
+            ID    string `json:"id"`
             Password string `json:"password"`
         }
 
@@ -76,7 +97,7 @@ func Login(c *fiber.Ctx, q *db.Queries) error {
 		utils.CheckErr(err)
 
 		user, err := q.GetUserByEmailAndPassword(ctx, db.GetUserByEmailAndPasswordParams{
-			Email:		req.Id,
+			ID:		req.ID,
 			Password:	req.Password,
 		})
 		utils.CheckErr(err)
